pkg/ibmvpc/examples/out/analysis_out/tgw_basic_example_multiple_regions_all_vpcs_subnetsBased_withPGW.txt
Connectivity between VPCs connected by TGW global-tg-ky (UID: crn:607)
ky-vpc1/ky-vpc1-net1 => ky-vpc3/ky-vpc3-net1 : All Connections
ky-vpc3/ky-vpc3-net1 => ky-vpc1/ky-vpc1-net1 : All Connections

Connectivity between VPCs connected by TGW global-tg-zn (UID: crn:595)
zn-vpc1/zn-vpc1-net1 => zn-vpc3/zn-vpc3-net1 : All Connections
zn-vpc3/zn-vpc3-net1 => zn-vpc1/zn-vpc1-net1 : All Connections

Connectivity between VPCs connected by TGW local-tg-ky (UID: crn:603)
ky-vpc1/ky-vpc1-net1 => ky-vpc2/ky-vpc2-net1 : All Connections
ky-vpc2/ky-vpc2-net1 => ky-vpc1/ky-vpc1-net1 : All Connections

Connectivity between VPCs connected by TGW local-tg-zn (UID: crn:599)
zn-vpc1/zn-vpc1-net1 => zn-vpc2/zn-vpc2-net1 : All Connections
zn-vpc2/zn-vpc2-net1 => zn-vpc1/zn-vpc1-net1 : All Connections

Subnet connectivity for VPC ete-backup-and-storage
sn-20230126-01 => sn-20230126-02 : All Connections
sn-20230126-01 => sn-20230126-03 : All Connections
sn-20230126-02 => sn-20230126-01 : All Connections
sn-20230126-02 => sn-20230126-03 : All Connections
sn-20230126-03 => sn-20230126-01 : All Connections
sn-20230126-03 => sn-20230126-02 : All Connections

Subnet connectivity for VPC ete-storage-project
sn-20221205-01 => sn-20221205-02 : All Connections
sn-20221205-01 => sn-20221205-03 : All Connections
sn-20221205-02 => Public Internet (all ranges) : All Connections
sn-20221205-02 => sn-20221205-01 : All Connections
sn-20221205-02 => sn-20221205-03 : All Connections
sn-20221205-03 => sn-20221205-01 : All Connections
sn-20221205-03 => sn-20221205-02 : All Connections

Subnet connectivity for VPC ky-vpc1
<nothing to report>

Subnet connectivity for VPC ky-vpc2
<nothing to report>

Subnet connectivity for VPC ky-vpc3
<nothing to report>

Subnet connectivity for VPC zn-vpc1
<nothing to report>

Subnet connectivity for VPC zn-vpc2
<nothing to report>

Subnet connectivity for VPC zn-vpc3
<nothing to report>
